syntax = "proto3";

package tpmwrappb;

option go_package = "github.com/salrashid123/go-tpm-wrapping/tpmwrappb";

/*
protoc -I ./ --include_imports \
    --experimental_allow_proto3_optional --include_source_info  \
      --descriptor_set_out=tpmwrappb/wrap.proto.pb   \
        --go_out=paths=source_relative:. tpmwrappb/wrap.proto
*/

message Secret {
  string name = 1;
  int32 version = 2;
  KeyType type = 3;
  enum KeyType {
    SEALED = 0;
    DUPLICATE = 1;
  }
  bool userAuth = 4;  
  repeated PCRS pcrs = 5;  
  oneof Key{
      SealedKey sealed_op=6;
      DuplicatedKey duplicated_op=7;
  }
}

message PCRS {
  int32 pcr = 1;
  bytes value = 2;
}

message SealedKey {
  string  keyfile = 1;
}

message DuplicatedKey {
  string name = 1;
  repeated PCRS pcrs = 2;  
  string keyfile = 3;
  string parentName = 4;
  bytes ekpub = 5;
  ParentKeyType parentKeyType = 6;
  enum ParentKeyType {
    EndorsementECC = 0;
    EndorsementRSA = 1;
    H2 = 2;    
  } 
}
